# packageman

./: .gitignore  .replit  .replitcliconfig  README.md  ed.py  load_package.py  main.py  main.sh  package.py  pyproject.toml  update.py  users  write.py
dummy package example/[name]/: README.md
dummy package example/[name]/files/: main.eo
pkgs/example package/: info.json
pkgs/example package/files/: main.eo
